# fastapi-practice

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/api/base/: controller.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  health.py  products.py
app/core/: config.py
app/exceptions/: exceptions.py  handlers.py
app/models/: __init__.py  mock_db.py
app/schemas/: base.py  product.py  seller.py  user.py
app/services/: base.py  product.py
tests/: test_health.py  test_product.py
