[project]
name = "fastapi-practice"
version = "0.1.0"
description = "A well-organized FastAPI project"
authors = [{ name = "Sachin Acharya" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "pydantic[email]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "Pillow",
    "fastapi-pagination",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",
    "mypy",
    "bandit"
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "FAST", # FastAPI-specific rules
    "S",    # Bandit (Security) rules
    "Q",    # flake8-quotes
    "ANN",  # flake8-annotations
    "TC",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "SLF",  # flake8-self
    "TID",  # flake8-tidy-imports
    "ERA",  # eradicate (commented out code)
    "PL",   # Pylint
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (common in FastAPI deps)
    "PLR0913", # Too many arguments in function definition
    "ANN002",  # Args (*{name}) doesn't need typing
    "ANN003",  # Kwargs (**{name}) doesn't need typing
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports in __init__.py are common for exports
"tests/**" = ["S101"]    # S101: Use of assert is required for pytest

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_decorators = false
disallow_any_generics = true
disallow_any_explicit = false
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "app.core.config"
disallow_any_explicit = false
warn_unused_ignores = false

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"] # B101: use of assert is common in FastAPI/Pytest

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
